Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4842

CLONE - creating breakpoints on an empty line creates stacked multiple breakpoints on the line below

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.3.0
    • Qt Creator 2.3.0
    • Debugger
    • None
    • Windows Vista x64
      cdb
      gdb
    • d58f0e7c756a36f487b1b395514487cf8d9d7444

    Description

      Steps to reproduce:

      In the debugger mode, try to create a breakpoint on an empty line.
      The breakpoint will be added to the line below. Multiple breakpoints will be stacked just like in the attached image.

      Expected behavior:
      The breakpoint should not be created at all.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kleint Friedemann Kleint
              rlohning Robert Löhning
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes