Debugger[CDB]: Move breakpoint back from corrected location.

Make it fully work.

Task-number: QTCREATORBUG-4842